<resources>
    <string name="app_name">Proyecto_Moviles</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_iniciar">Iniciar Sesión</string>
    <string name="tv_slogan">Aplicación para manejar el inventario de tu empresa</string>

    <string name="et_usuario">Usuario:</string>
    <string name="btn_registrarme">Registrarme</string>
    <string name="et_nombre">Nombre:</string>
    <string name="et_mail">Correo Electrónico:</string>
    <string name="et_telefono">Teléfono:</string>
    <string name="btn_regresar">Regresar</string>
    <string name="et_password">Contraseña:</string>
    <string name="footer">Desarrollado por ITSON</string>
    <string name="opcion_vercatalogo">Ver Catalogo</string>
    <string name="opcion_configuracion">Configuracion</string>

    <string name="tv_registro_usuario">Registro de Usuario</string>
    <string name="tv_registro_producto">Registro de Producto</string>
    <string name="btn_guardarProducto">Guardar Producto</string>
    <string name="et_nombreProducto">Nombre del Producto: </string>
    <string name="et_cantidad">Cantidad: </string>
    <string name="sp_categoria">Categorias:</string>
    <string name="et_descripcion">Descripcion: (Opcional)</string>
</resources>