<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="50dp"
    android:layout_height="match_parent"
    tools:context=".registro_producto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:text="@string/tv_registro_producto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_nombreProducto"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_nombreProducto" />

    <EditText
        android:id="@+id/et_cantidad"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="60dp"
        android:hint="@string/et_cantidad"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/sp_categoria"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/et_descripcion"
        android:padding="16dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/et_descripcion" />

    <Button
        android:id="@+id/btn_guardarProducto"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_guardarProducto" />




</LinearLayout>