<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundColor">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:src="@drawable/notes"/>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_marginTop="60dp"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="36dp"
        android:shape="rectangle"
        android:radius="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_slogan"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="italic|bold"

        android:textAlignment="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:text="@string/btn_iniciar"
        android:textSize="20dp"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textButtonColor"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:textSize="20dp"
        android:text="@string/btn_registrar"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textButtonColor"
        android:layout_marginTop="28dp"/>

</LinearLayout>
