<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login"
    android:paddingHorizontal="50dp"
    android:background="@color/backgroundColor"
    >

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/user"
        />

    <EditText
        android:id="@+id/et_usuario"
        android:hint="@string/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:padding="20dp"
        android:layout_marginBottom="30dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_password"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"

        android:padding="20dp"
        android:hint="@string/et_password"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_loguear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFD700"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="20dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/textColor"
        android:text="@string/btn_iniciar" />

</LinearLayout>





